[tool.poetry]
name = "cipher_yb2503"
version = "0.1.0"
description = "We are adding cipher to the package"
authors = ["Yunxin Bo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
